add 1-content provider for get favorite  movies &get favorite movie detail&add favorite movie &delete 2-share first trailer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,5 +29,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.settings.SettingsActivity" />
         </activity>
+
+        <provider
+            android:authorities="app.movie.android.com.popularmovie"
+            android:name=".data.MovieProvider" />
     </application>
 </manifest>
